[build-system]
requires = ['setuptools>=45', 'setuptools_scm[toml]>=6.2']

[project]
name = "rpyc-ng"
authors = [
    { name = "Tomer Filiba", email = "tomerfiliba@gmail.com" },
    { name = "James Stronz", email = "comrumino@archstrike.org" },
    { name = 'René Lehfeld', email = "54720674+rlehfeld@users.noreply.github.com" },
]
description = "Remote Python Call Next Generation (RPyC-NG) is a transparent and symmetric distributed computing library"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = ["plumbum"]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://rpyc-ng.readthedocs.org"
Source = "https://github.com/rlehfeld/rpyc-ng"

[project.scripts]
rpyc_classic = "rpyc.cli.rpyc_classic:main"
rpyc_registry = "rpyc.cli.rpyc_registry:main"
"rpyc_classic.py" = "rpyc.cli.rpyc_classic:main"
"rpyc_registry.py" = "rpyc.cli.rpyc_registry:main"

[tool.setuptools]
packages = ["rpyc"]
obsoletes = ["rpyc"]

[tool.setuptools.dynamic]
readme = {file = ['README.rst']}

[tool.setuptools_scm]
write_to = "rpyc/version.py"

[tool.codespell]
skip = ".git,*.pdf,*.svg"
#
# ignore-words-list = ''
